# booru-rs-v1

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
booru-cli/: Cargo.toml
booru-cli/src/: main.rs
booru-cli/src/commands/: fetch.rs  fetch_all.rs  login.rs  mod.rs  resize.rs  tag.rs
booru-cli/src/commands/progress/: download.rs  fetch.rs  mod.rs  spinner.rs
booru-cli/src/commands/text/: apikey.txt
booru-cli/src/commands/utils/: mod.rs  progressbar.rs
booru-lib/: Cargo.toml
booru-lib/src/: config.rs  error.rs  http.rs  lib.rs
booru-lib/src/api/: artists.rs  mod.rs  posts.rs
booru-lib/src/models/: artist.rs  common.rs  mod.rs  post.rs  user_profile.rs
booru-lib/src/models/serde/: mod.rs  newline_delimited.rs  newline_space_delimited.rs  space_delimited.rs
booru-lib/tests/: api_artists.rs  api_posts.rs
