[package]
name = "booru"
version = "0.0.1"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "booru"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
derive_builder = "0.9"
derive_more = "0.99"
image = "0.23"
dirs = "3.0"
toml = "0.5"
serde = "1.0"
serde_with = "1.6"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.2"
once_cell = "1.5"
regex = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
